--- a/src/main/webapp/relusuario.xhtml
+++ b/src/main/webapp/relusuario.xhtml
@@ -7,7 +7,7 @@
 	xmlns:b="http://bootsfaces.net/ui">
 
 <h:head>
-	<title>Usuario</title>
+	<title>User Report</title>
 </h:head>
 
 <h:body>
@@ -17,14 +17,14 @@
 
 		<b:messages id="msg-launch" />
 
-		<br />
-		<div style="width: 500px; text-align: justify">
+		<div style="width: 600px; text-align: justify">
 			<h4>Users report page</h4>
 			Click on 'List Users' to access information for all users on the system.
 			Then, if necessary, use the field 'Search' to filter the search.
-			Also visit the <a href="rellancamento.jsf">launch report page</a>.
+			Also visit the <a href="rellancamento.jsf">launch report page</a> and 
+			the <a href="reportCompany.jsf">company report page</a>.
 		</div>
-
+		<br/>
 		<h:form id="formPessoas" style="margin-bottom: 3%;">
 
 			<b:commandButton value="List Users" look="primary "
