--- a/src/main/webapp/info.xhtml
+++ b/src/main/webapp/info.xhtml
@@ -17,7 +17,7 @@
 
 	<ui:include src="/menu.xhtml" />
 	<div style="margin-left: 15%; margin-right: 5%; margin-bottom: 5%; 
-		margin-top: 5% ; width: 600px; text-align: justify; font-family: verdana">
+		margin-top: 5% ; width: 800px; text-align: justify; font-family: verdana">
 		<h3>About the System</h3>
 		<p>This model system registers users, and entries made by each user. Registration forms have validations. After logging in, 
 		a list of users already saved in the system is loaded. Each user can log into the system using their own login and password, 
@@ -25,10 +25,11 @@
 		for the logged user at the moment. There are report generation pages for launch and for the user, in which it´s possible to search for 
 		results through filters or not and generate a PDF report.</p>
 		<p>Tolls - Technical Information: Eclipse IDE, Postgresql, EC2 Amanzon Tecnology (deploy on cloud Server).
-		Java Server Faces, Hibernate, CDI, BootFaces.</p>
+		Java Server Faces, Hibernate, CDI, BootFaces.</p> 
 		<p><a href="https://github.com/natanjava/JSF-intro" target="_blank">GitHub Link</a>.  
 		</p>
 		
+		<h:graphicImage value="/resources/img/caseSis.jpg" alt="User Case Diagram" width="800" height="600" />
 		
 	</div>
 
