--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -20,6 +20,7 @@
             <h:form styleClass="form-signin" prependId="false">
             	<b:messages id="msg-erro" style="max-width:400px;" />
                 <h3 class="form-signin-heading">Please sign in</h3>
+				<h5 class="form-signin-heading">Launch System. Version 2.0</h5>                
                 <b:inputText id="email" value ="#{pessoaBean.pessoa.login}"  placeholder="write admin here" 
 							 required="true" requiredMessage="Login required"  >
                     <f:facet name="prepend">
