--- a/src/main/webapp/rellancamento.xhtml
+++ b/src/main/webapp/rellancamento.xhtml
@@ -7,7 +7,7 @@
 	xmlns:b="http://bootsfaces.net/ui">
 
 <h:head>
-	<title>Launche Report</title>
+	<title>Launch Report</title>
 </h:head>
 
 <h:body>
