--- a/src/main/webapp/lancamento.xhtml
+++ b/src/main/webapp/lancamento.xhtml
@@ -37,7 +37,8 @@
 								required="true" requiredMessage="Descripton required"  />
 	
 			    <h:outputLabel value="Supplier" />
-			    <b:selectOneMenu value="#{lancamentoBean.lancamento.empresaOrigem}">
+			    <b:selectOneMenu value="#{lancamentoBean.lancamento.empresaOrigem}" required="true" 
+			    				requiredMessage="Company required. ADMINISTRATOR or ASSISTANT muss to insert Company on the Company Page" >
 			        <f:selectItems value="#{lancamentoBean.companies}" var="company" itemValue="#{company}" itemLabel="#{company.name}" />
 			    </b:selectOneMenu>
 	
