--- a/src/main/webapp/rellancamento.xhtml
+++ b/src/main/webapp/rellancamento.xhtml
@@ -7,7 +7,7 @@
 	xmlns:b="http://bootsfaces.net/ui">
 
 <h:head>
-	<title>Launch Report</title>
+	<title>Order Report</title>
 </h:head>
 
 <h:body>
@@ -17,8 +17,8 @@
 
 		<b:messages id="msg-launch" />
 		<div style="width: 600px; text-align: justify">
-			<h4>Launch report page</h4>
-			Click on 'List Launches' to access information for all Launches on the system.
+			<h4>Order report page</h4>
+			Click on 'List Orders' to access information for all Orders on the system.
 			Then, if necessary, use the field 'Search' to filter the search.
 			Also visit the <a href="relusuario.jsf">user report page</a> and 
 			the the <a href="reportCompany.jsf">company report page</a>.
@@ -27,7 +27,7 @@
 		<br/>	
 		<h:form id="formLancamento">
 	
-			<b:commandButton value="List Launches" look="primary "
+			<b:commandButton value="List Orders" look="primary "
 				action="#{rellancamento.bucarLancamento}" />
 	
 		</h:form>
