initial message for the manager too

--- a/src/main/webapp/company.xhtml
+++ b/src/main/webapp/company.xhtml
@@ -17,7 +17,7 @@
 
 		
 		<div style="width: 600px; text-align: justify;">
-		This is the registration page of new partner company. To generate Report, visit the <a href="reportCompany.jsf">company report page</a>.
+		This is the registration page of new partner company (supplier). To generate Report, visit the <a href="reportCompany.jsf">company report page</a>.
 		</div>
 	
 		<b:messages id="msg-launch" style="max-width:600px;"/>
