--- a/src/main/webapp/info.xhtml
+++ b/src/main/webapp/info.xhtml
@@ -39,9 +39,9 @@
 		     in the system. Generate reports on users, orders and companies.<br/>
 		 </p>
 		
-		<h:graphicImage value="/resources/img/imgCaseS.jpeg" alt="User Case Diagram" width="800" height="600" />
+		<h:graphicImage value="/resources/img/imgCaseZ.jpeg" alt="User Case Diagram" width="800" height="600" />
 		
-		<p><b>Tolls - Technical Information:</b> Eclipse IDE, Postgresql, EC2 Amanzon Tecnology,
+		<p><b>Tools - Technical Information:</b> Eclipse IDE, Postgresql, EC2 Amanzon Tecnology,
 		Java Server Faces, Hibernate, CDI, BootFaces, JavaScript</p> 
 		<p><a href="https://github.com/natanjava/JSF-bootfaces" target="_blank">GitHub Link</a>.  
 		</p>
